--- a/KernelTestingWPF/RunningPage.xaml
+++ b/KernelTestingWPF/RunningPage.xaml
@@ -30,8 +30,10 @@
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal" Grid.Column="1">
                 <Button Content="Button 1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                        Click="Button_Click"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
                 <Button Content="Button 2" VerticalAlignment="Center" HorizontalAlignment="Center"
+                        Click="Button_Click_1"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
                 <Button Content="Button 3" VerticalAlignment="Center" HorizontalAlignment="Center"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
