--- a/KernelTestingWPF/RunningPage.xaml
+++ b/KernelTestingWPF/RunningPage.xaml
@@ -58,7 +58,9 @@
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <TextBlock Name="txtInfo" Text="InfoText" Margin="5,0,0,0" />
+            <ScrollViewer>
+                <TextBlock Name="txtInfo" Text="InfoText" Margin="5,0,0,0" />
+            </ScrollViewer>
             <Button Name="GoToReportButton" Click="GoToReportButton_Click"
                     Background="White" BorderBrush="Black" Width="80"
                 Grid.Column="2" Grid.Row="2" Content="View Report"
