--- a/KernelTestingWPF/FastSlowPage.xaml
+++ b/KernelTestingWPF/FastSlowPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="KernelTestingWPF.RunningPage"
+﻿<Page x:Class="KernelTestingWPF.FastSlowPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:KernelTestingWPF"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
-      Title="Running Page">
+      Title="FastSlow Page">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
@@ -48,7 +48,7 @@
                 </StackPanel>
             </ScrollViewer>
             <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        </Grid> 
+        </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
@@ -62,6 +62,6 @@
                 Grid.Column="2" Grid.Row="2" Content="View Report"
                 HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
-        
+
     </Grid>
 </Page>
