--- a/KernelTestingWPF/RunningPage.xaml
+++ b/KernelTestingWPF/RunningPage.xaml
@@ -32,10 +32,10 @@
             </Grid.ColumnDefinitions>
             <ListView Name="listViewInstructions" Grid.Column="3" Grid.Row="1" HorizontalContentAlignment="Center" />
             <StackPanel Orientation="Horizontal" Grid.Column="1">
-                <Button Content="Button 1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                <Button Content="  -  " VerticalAlignment="Center" HorizontalAlignment="Center"
                         Click="Button_Click"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
-                <Button Content="Button 2" VerticalAlignment="Center" HorizontalAlignment="Center"
+                <Button Content="  +  " VerticalAlignment="Center" HorizontalAlignment="Center"
                         Click="Button_Click_1"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
                 <Button Content="Button 3" VerticalAlignment="Center" HorizontalAlignment="Center"
