--- a/KernelTestingWPF/ReportPage.xaml
+++ b/KernelTestingWPF/ReportPage.xaml
@@ -14,6 +14,23 @@
             <RowDefinition Height="3*" />
             <RowDefinition />
         </Grid.RowDefinitions>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height=".2*" />
+                <RowDefinition />
+                <RowDefinition Height=".2*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width=".2*" />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition Width=".2*" />
+            </Grid.ColumnDefinitions>
+            <ListView Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Width="200" Name="listViewReport1"></ListView>
+            <ListView Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Width="200" Name="listViewReport2"></ListView>
+            <ListView Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" Width="200" Name="listViewReport3"></ListView>
+        </Grid>
         <Grid>
             <TextBlock Name="txtTitle" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Program Report" FontFamily="Calibri" FontSize="24" />
         </Grid>
