--- a/KernelTestingWPF/ReportPage.xaml
+++ b/KernelTestingWPF/ReportPage.xaml
@@ -25,11 +25,13 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
+                <ColumnDefinition />
                 <ColumnDefinition Width=".2*" />
             </Grid.ColumnDefinitions>
-            <ListView Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Width="200" Name="listViewReport1"></ListView>
-            <ListView Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Width="200" Name="listViewReport2"></ListView>
-            <ListView Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" Width="200" Name="listViewReport3"></ListView>
+            <ListView Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Width="150" Name="listViewReport1"></ListView>
+            <ListView Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Width="150" Name="listViewReport2"></ListView>
+            <ListView Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" Width="150" Name="listViewReport3"></ListView>
+            <ListView Grid.Row="1" Grid.Column="4" HorizontalAlignment="Center" Width="150" Name="listViewReport4"></ListView>
         </Grid>
         <Grid>
             <TextBlock Name="txtTitle" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Program Report" FontFamily="Calibri" FontSize="24" />
