--- a/KernelTestingWPF/FastSlowPage.xaml
+++ b/KernelTestingWPF/FastSlowPage.xaml
@@ -20,6 +20,7 @@
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition />
+                <RowDefinition Height="2*"/>
                 <RowDefinition Height="5*" />
                 <RowDefinition />
             </Grid.RowDefinitions>
@@ -30,7 +31,43 @@
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width=".3*"/>
             </Grid.ColumnDefinitions>
-            <ListView Name="listViewInstructions" Grid.Column="3" Grid.Row="1" HorizontalContentAlignment="Center" />
+            <Grid Grid.Row="1" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="0.15*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".3*"/>
+                    <ColumnDefinition Width="6*" />
+                    <ColumnDefinition Width=".3*"/>
+                </Grid.ColumnDefinitions>
+                <ScrollViewer Name="myScrollView" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                          VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                    <StackPanel Name="ScrollStackPanel" VerticalAlignment="Stretch" Orientation="Horizontal">
+
+                    </StackPanel>
+                </ScrollViewer>
+                
+            </Grid>
+            <Grid Grid.Row="2" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="7*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <ListView Name="slowListView" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+                <ListView Name="fastListView" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+                <TextBlock Text="Fast Queue" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" />
+                <TextBlock Text="Slow Queue" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3"/>
+            </Grid>
+            
+            <ListView Name="listViewInstructions" Grid.Column="3" Grid.Row="2" HorizontalContentAlignment="Center" />
             <StackPanel Orientation="Horizontal" Grid.Column="1">
                 <Button Content="Button 1" VerticalAlignment="Center" HorizontalAlignment="Center"
                         Click="Button_Click"
@@ -41,12 +78,7 @@
                 <Button Content="Button 3" VerticalAlignment="Center" HorizontalAlignment="Center"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
             </StackPanel>
-            <ScrollViewer Name="myScrollView" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                          VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                <StackPanel Name="ScrollStackPanel" VerticalAlignment="Stretch" Orientation="Horizontal">
-
-                </StackPanel>
-            </ScrollViewer>
+            
             <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         </Grid>
         <Grid Grid.Row="2">
