--- a/KernelTestingWPF/FastSlowPage.xaml
+++ b/KernelTestingWPF/FastSlowPage.xaml
@@ -43,7 +43,7 @@
                 </Grid.ColumnDefinitions>
                 <ScrollViewer Name="myScrollView" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                           VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                    <StackPanel Name="ScrollStackPanel" VerticalAlignment="Stretch" Orientation="Horizontal">
+                    <StackPanel Name="ScrollStackPanel" VerticalAlignment="Stretch" HorizontalAlignment="Center" Orientation="Horizontal">
 
                     </StackPanel>
                 </ScrollViewer>
@@ -68,7 +68,7 @@
             </Grid>
             
             <ListView Name="listViewInstructions" Grid.Column="3" Grid.Row="2" HorizontalContentAlignment="Center" />
-            <StackPanel Orientation="Horizontal" Grid.Column="1">
+            <StackPanel Visibility="Collapsed" Orientation="Horizontal" Grid.Column="1">
                 <Button Content="Button 1" VerticalAlignment="Center" HorizontalAlignment="Center"
                         Click="Button_Click"
                         Margin="0,0,5,0" Background="White" BorderBrush="Black"/>
